# RentalsApartment_bot

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  catalog.db  docker-compose.yml  main.py  pyproject.toml  requirements.txt  start_bot.py
app/: admin_handlers.py  database.py  keyboards.py  nlp_processor.py  payment.py  states.py  user_handlers.py  utils.py
app/database/: PostgreSQL_db.py  sqlite3_db.py
app/handlers/: admin_handlers.py  user_handlers.py
app/keyboards/: admin_keyboard.py  user_keyboard.py
apps/bookings/: models.py
apps/bookings/migrations/: 0001_initial.py
apps/room/: admin.py  models.py
apps/room/migrations/: 0001_initial.py
apps/rooms/: admin.py  models.py  selectors.py
apps/users/: models.py  selectors.py
bot/: payment.py  states.py
bot/common/: texts.py
bot/db/: crud.py  database.py
bot/handlers/: catalog_handlers.py  user_handlers.py
bot/keyboards/: user_keyboard.py
bot/nlp/: llm_client.py  sentiment_analyzer.py
bot/services/: ai_service.py  reservation_draft.py
bot/utils/: catalog_utils.py
config/: settings.py
migrations/: env.py
migrations/versions/: a0d36ceba498_initial.py
src/: payment.py  states.py
src/common/: callbacks.py  texts.py
src/database/: PostgreSQL_db.py
src/db/: crud.py  database.py  models.py
src/handlers/: admin_handlers.py  user_handlers.py
src/keyboards/: admin_keyboard.py  user_keyboard.py
src/nlp/: llm_client.py  vector_search.py
src/services/: ai_service.py  booking_service.py  reservation_draft.py
src/utils/: catalog_utils.py  paginator.py
(+16 files in other folders)
