[project]
name = "rentalsapartment-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.28.2",
    "django>=6.0.5",
    "ollama>=0.6.2",
    "pgvector>=0.4.2",
    "pillow>=12.2.0",
    "psycopg2-binary>=2.9.12",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.5.1",
    "sqlalchemy>=2.0.49",
    "torch>=2.12.0",
    "transformers>=5.9.0",
]
